cicd/istio/reviews/sourceip-lb.yaml
# [내 PC] --(curl)--> [LoadBalancer] --(NAT)--> [Istio IngressGateway] -- [Service]
# Source IP가 LoadBalancer의 IP로 바뀌어 있기 때문에 모든 요청이 같은 IP로 인식돼서 sticky session이 의미가 없다.
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: sticky-session-lb-reviews
  namespace: bookinfo
spec:
  hosts:
    - reviews   
  http:
    - route:
        - destination:
            host: reviews
            subset: reviews-pods              

---
kind: DestinationRule  
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: sticky-session-lb-reviews 
  namespace: bookinfo
spec:
  host: reviews
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: true       # 클라이언트 ip 사용
  subsets:
    - labels:  
        app: reviews # reviews 파드가 공통적으로 가지고 있는 lables
      name: reviews-pods
